[project]
name = "ddx3x-stress-granules-analyses"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cellpose==3.1.0",
    "jupyter>=1.1.1",
    "llvmlite==0.43",
    "matplotlib>=3.9.2",
    "microfilm>=0.2.1",
    "pandas>=2.2.3",
    "pingouin>=0.5.5",
    "scikit-image>=0.24.0",
    "seaborn>=0.13.2",
    "torch>=2.5.1",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu121", marker = "platform_system != 'Darwin'" }]
torchvision = [
  { index = "pytorch-cu121", marker = "platform_system != 'Darwin'" },
]
